--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -4,7 +4,7 @@ html {
 }
 //Body Default Style
 body {
-	font-family: var(--body-font);
+	font-family: var(--heading-font);
 	background: var(--s4);
 	color: var(--n0);
 	font-size: 18px;
@@ -20,6 +20,7 @@ section,
 footer {
 	overflow: hidden;
 }
+
 //Tag Default Style
 a, 
 p,
@@ -29,6 +30,7 @@ label,
 li {
 	margin: 0;
 	font-weight: 400;
+	font-family: var(--body-font);
 	i{
 		font-weight: 400;
 	}
@@ -59,13 +61,16 @@ h5 > a,
 h6,
 h6 > a,
 .display-one, .display-two, .display-three, .display-four, .display-five, .display-six, .heading{
-	font-family: var(--body-font);
+	font-family: var(--heading-font);
 	padding: 0;
 	margin: 0;
 	color: var(--n900);
 	line-height: 128%;
 	display: block;
 	transition: var(--transition);
+	a{		
+		font-family: var(--heading-font);
+	}
 	span{
 		font-size: inherit;
 		font-family: inherit;
@@ -1034,3 +1039,139 @@ iframe {
 	width: -moz-fit-content !important;
 	width: fit-content !important;
 }
+
+
+//Preloader
+.preloader{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(255, 255, 255, 0.962);
+	z-index: 9999;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	.box{
+		p{ 
+			span{
+				font-size: 36px;
+				font-weight: 500;
+				text-transform: uppercase;
+				&:nth-child(1){
+					animation: updown 1.5s linear infinite;
+					color: var(--p1);
+				}
+				&:nth-child(2){
+					animation: updown 2s linear infinite;
+					color: var(--p1);
+				}
+				&:nth-child(3){
+					animation: updown 2.5s linear infinite;
+					color: var(--p1);
+				}
+				&:nth-child(4){
+					animation: updown 3s linear infinite;
+					color: var(--p1);
+				}
+				&:nth-child(5){
+					animation: updown 3.5s linear infinite;
+					color: var(--p1);
+				}
+				&:nth-child(6){
+					animation: updown 2.5s linear infinite;
+				}
+				&:nth-child(7){
+					animation: updown 2s linear infinite;
+				}
+				&:nth-child(8){
+					animation: updown 1.5s linear infinite;
+				}
+			}
+		}
+	}
+}
+@keyframes pres1 {
+	100%{
+		left: 50%;
+	}
+}
+@keyframes pres2 {
+	100%{
+		right: 50%;
+	}
+}
+// Preloader
+
+//Global Newsletter Popup
+#popup-overlay {
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.4s;
+}
+#popup-overlay.active {
+    display: flex; 
+	opacity: 1;
+	visibility: visible;
+	.popup{
+		transform: translateY(0);
+	}
+}
+.hidden-newsletter{
+	.popup {
+		background-color: #fff;
+		padding: 20px;
+		border-radius: 10px;
+		text-align: center;
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+		width: 90%;
+		max-width: 884px;
+		transform: translateY(200px);
+		transition: all 0.6s;
+		display: flex;
+		align-items: center;
+		.newsletter-form-content{
+			max-width: 370px;
+			margin: 0 auto;
+			padding: 24px 20px;
+			.email-items{
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				border: 1px solid var(--n80);
+				padding: 1px 14px;
+				gap: 6px;
+				i{
+					color: var(--n80);
+					font-size: 14px;
+				}
+				input{
+					outline: none;
+					padding: 10px 0;
+					width: 100%;
+					border: unset;
+				}
+			}
+		}
+	}
+	.close-btn {
+		position: absolute;
+		top: 10px;
+		right: 16px;
+		font-size: 26px;
+		cursor: pointer;
+		color: #000;
+	}	
+}
+//Global Newsletter Popup
