--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,7 +13,7 @@
   <div class="cont grid grid-cols-12 gap-4 relative z-[2] pb-12 xl:pb-20">
     <div class="col-span-12 lg:col-span-6 xl:col-span-4 reveal_anim" data-reveal-from="right">
       <img src="./assets/images/logo.png" class="mb-4" alt="" />
-      <p class="mb-6">Welcome to Agriculturio, where fresh, organic produce meets sustainability.</p>
+      <p class="mb-6">Welcome to WellHub, where fresh, organic produce meets sustainability.</p>
       <div class="flex items-center gap-2">
         <a href="#" aria-label="social site link" class="social-icon two">
           <i class="hgi-stroke hgi-facebook-01"></i>
@@ -60,8 +60,14 @@
     </div>
   </div>
 </footer>
-<div class="bg-neutral-0 py-4 xl:py-6 text-center">
+<div class="bg-neutral-0 py-4 xl:py-6">
   <div class="cont">
-    <p>Copyright © <span id="year"></span> <a href="index.html" class="text-green-500 font-semibold underline">Agriculturio</a> All Rights Reserved</p>
+    <div class="grid sm:flex sm:justify-between justify-center gap-y-2 sm:gap-y-0">
+      <p>Copyright © <span id="year"></span> <a href="index.html" class="text-green-500 font-semibold underline">WellHub</a> All Rights Reserved</p>
+      <div class="flex sm:justify-start justify-center gap-x-3 md:gap-x-5">
+        <a href="privacy-policy.html" class="link">Privacy Policy</a>
+        <a href="terms-conditions.html" class="link">Terms & Conditions</a>
+      </div>
+    </div>
   </div>
 </div>
