--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,7 +69,7 @@
       </li>
     </ul>
     <div class="flex items-center gap-4">
-      <a href="contact-us.html" class="btn-primary max-xl:!hidden">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+      <a href="contact-us.html" class="btn-primary max-xl:!hidden group">Get In Touch!<i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700 group-hover:rotate-[45deg] duration-300"></i></a>
       <div>
         <button class="topbar-btn search-btn bg-neutral-0/5 backdrop-blur-md border-neutral-0/10 text-neutral-0"><i class="hgi-stroke hgi-search-01"></i></button>
         <div class="search-bar">
