--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -144,7 +144,7 @@
     @apply py-2 px-4 rounded-lg  border  inline-flex hover:bg-green-300 duration-300;
   }
   .btn-primary {
-    @apply bg-green-500 pl-6 xl:pl-8 gap-4 uppercase inline-flex items-center ease-linear justify-center rounded-full p-2 font-semibold text-neutral-0 cursor-pointer;
+    @apply bg-green-500 hover:bg-green-600 duration-300 pl-6 xl:pl-8 gap-4 uppercase inline-flex items-center ease-linear justify-center rounded-full p-2 font-semibold text-neutral-0 cursor-pointer;
   }
   .btn-primary i {
     @apply size-8 xxl:size-12 flex items-center justify-center bg-yellow-200 text-xl xxl:text-2xl rounded-full text-neutral-700;
@@ -235,7 +235,7 @@
     }
   }
   .topbar-btn {
-    @apply flex items-center justify-center text-xl xl:text-2xl border border-neutral-40 size-12 xxl:size-[64px] rounded-full;
+    @apply flex hover:bg-green-600 hover:border-green-600 hover:text-neutral-0 duration-500 items-center justify-center text-xl xl:text-2xl border border-neutral-40 size-12 xxl:size-[64px] rounded-full;
   }
   .search-bar {
     @apply fixed w-full h-44 opacity-0 shadow-xl bg-neutral-0 z-10 top-0 left-0 right-0 items-center -translate-y-full duration-300 ease-linear;
