--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -133,6 +133,14 @@
   }
   .brandslider .swiper-wrapper {
     transition-timing-function: linear !important;
+    h2{
+      color: #fff;
+    }
+    img{
+      width: 35px;
+      height: 35px;
+      object-fit: contain
+    }
   }
 }
 
@@ -144,7 +152,7 @@
     @apply py-2 px-4 rounded-lg  border  inline-flex hover:bg-green-300 duration-300;
   }
   .btn-primary {
-    @apply bg-green-500 hover:bg-green-600 duration-300 pl-6 xl:pl-8 gap-4 uppercase inline-flex items-center ease-linear justify-center rounded-full p-2 font-semibold text-neutral-0 cursor-pointer;
+    @apply bg-green-300 hover:bg-green-600 duration-300 pl-6 xl:pl-8 gap-4 uppercase inline-flex items-center ease-linear justify-center rounded-full p-2 font-semibold text-neutral-0 cursor-pointer;
   }
   .btn-primary i {
     @apply size-8 xxl:size-12 flex items-center justify-center bg-yellow-200 text-xl xxl:text-2xl rounded-full text-neutral-700;
@@ -247,7 +255,7 @@
     background: linear-gradient(180deg, rgba(249, 191, 75, 0) 0%, rgba(249, 191, 75, 0.28) 100%);
   }
   .sub-heading {
-    @apply py-2 px-4 rounded-full border border-neutral-30 max-w-max;
+    @apply py-2 px-4 uppercase flex items-center gap-2 font-medium rounded-tr-2xl rounded-bl-2xl border bg-green-300 text-neutral-0 max-w-max;
   }
 
   .odometer-text {
