--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="max-w-[1800px] mx-auto flex justify-between items-center">
     <a href="./index.html">
       <img src="./assets/images/logo-white.png" class="max-sm:hidden" alt="" />
-      <img src="./assets/images/icon.png" class="sm:hidden" alt="" />
+      <img src="./assets/images/favicon.png" class="sm:hidden" alt="" />
     </a>
     <ul class="menu two">
       <a class="flex mb-4 lg:hidden" href="index.html">
