--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,16 +1,19 @@
-<footer class="bg-green-50 pt-14 xl:pt-28 relative after:absolute after:h-full after:right-0 after:top-0 after:bg-neutral-900 after:xl:w-[55%]">
-  <div class="cont grid grid-cols-12 relative z-[2]">
-    <div class="col-span-12 lg:col-span-6 xl:col-span-5 pb-10 mb-10 border-b border-neutral-40 xl:pb-20 xl:mb-20">
-      <h2 class="h1 reveal_anim">Subscribe To Our Newsletter</h2>
-    </div>
-    <div class="col-span-12 lg:col-span-6 xl:col-span-7 flex justify-end items-center pb-10 mb-10 border-b border-neutral-40/15 xl:pb-20 xl:mb-20">
-      <form class="fade_anim flex items-center rounded-full bg-neutral-500 xl:bg-neutral-0/5 sm:w-[477px]">
-        <input type="email" placeholder="Email Address" class="py-2 pl-6 w-full text-neutral-10 bg-transparent" />
-        <button class="py-4 px-8 rounded-full bg-yellow-200 font-semibold">Subscribe</button>
-      </form>
+<footer class="bg-green-0 relative overflow-hidden">
+  <div class="newsletter-one lg:py-16 py-12 relative border-b border-neutral-40 after:absolute after:top-0 xl:after:w-[50%] lg:after:w-[54%] after:w-[100%] after:h-full after:end-0 after:bg-green-300">
+    <div class="cont grid grid-cols-12 relative z-[2] lg:text-start text-center">
+      <div class="col-span-12 lg:col-span-6 xl:col-span-6 lg:mb-0 mb-5">
+        <h2 class="h1 reveal_anim lg:mb-3 mb-2 lg:text-neutral-900 text-neutral-0">Subscribe Our Newsletter</h2>
+        <p class="md:text-lg text-base lg:text-gray-800 text-neutral-0">Get the latest deals and offers right to your inbox.</p>
+      </div>
+      <div class="col-span-12 lg:col-span-6 xl:col-span-6 flex lg:justify-end justify-center items-center">
+        <form class="fade_anim p-1 flex items-center bg-[rgba(255,255,255,0.04)] rounded-full border-[1px] border-[rgba(255,255,255,0.16)] sm:w-[477px]">
+          <input type="email" placeholder="Email Address" class="py-2 pl-6 w-full text-neutral-10 bg-transparent placeholder:text-neutral-40" />
+          <button class="py-4 px-8 rounded-full bg-yellow-200 font-semibold">Subscribe</button>
+        </form>
+      </div>
     </div>
   </div>
-  <div class="cont grid grid-cols-12 gap-4 relative z-[2] pb-12 xl:pb-20">
+  <div class="cont grid grid-cols-12 gap-4 relative z-[2] pb-12 xl:pb-20 pt-120">
     <div class="col-span-12 lg:col-span-6 xl:col-span-4 reveal_anim" data-reveal-from="right">
       <img src="./assets/images/logo.png" class="mb-4" alt="" />
       <p class="mb-6">Welcome to WellHub, where fresh, organic produce meets sustainability.</p>
@@ -31,21 +34,23 @@
     </div>
     <div data-reveal-from="bottom" class="reveal_anim col-span-12 lg:col-span-6 xl:col-span-7 xl:col-start-8 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3">
       <div>
-        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-0">Services</p>
+        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Quick Links</p>
+        <ul class="space-y-4">
+          <li><a href="index.html" class="link" >Home</a></li>
+          <li><a href="about.html" class="link" >About Us</a></li>
+          <li><a href="about.html" class="link" >Services</a></li>
+          <li><a href="blogs.html" class="link" >Blogs</a></li>
+          <li><a href="#0" class="link" >Shop</a></li>
+          <li><a href="#0" class="link" >Contact Us</a></li>
+        </ul>
+      </div>
+      <div>
+        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-900">Services</p>
         <ul class="space-y-4">
           <li><a href="index.html" class="link">Agriculture</a></li>
           <li><a href="index-2.html" class="link">Agro Services</a></li>
           <li><a href="index-3.html" class="link">Dairy Farm</a></li>
           <li><a href="index-4.html" class="link">Organic Farm</a></li>
-        </ul>
-      </div>
-      <div>
-        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-0">Quick Links</p>
-        <ul class="space-y-4">
-          <li><a href="index.html" class="link">Home</a></li>
-          <li><a href="shop.html" class="link">Products</a></li>
-          <li><a href="blogs.html" class="link">Blogs</a></li>
-          <li><a href="portfolio-1.html" class="link">Gallery</a></li>
         </ul>
       </div>
       <div>
@@ -60,7 +65,7 @@
     </div>
   </div>
 </footer>
-<div class="bg-neutral-0 py-4 xl:py-6">
+<div class="bg-neutral-0 py-4 xl:py-6 border-t border-neutral-40">
   <div class="cont">
     <div class="grid sm:flex sm:justify-between justify-center gap-y-2 sm:gap-y-0">
       <p>Copyright © <span id="year"></span> <a href="index.html" class="text-green-500 font-semibold underline">WellHub</a> All Rights Reserved</p>
