--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
-<footer class="bg-green-0 relative overflow-hidden">
-  <div class="newsletter-one lg:py-16 py-12 relative border-b border-neutral-40 after:absolute after:top-0 xl:after:w-[50%] lg:after:w-[54%] after:w-[100%] after:h-full after:end-0 after:bg-green-300">
-    <div class="cont grid grid-cols-12 relative z-[2] lg:text-start text-center">
+<footer class="bg-green-0 relative overflow-hidden z-[1]">
+  <div class="newsletter-one relative after:absolute after:top-0 xl:after:w-[50%] lg:after:w-[54%] after:w-[100%] after:h-full after:end-0 after:bg-green-300">
+    <div class="cont grid grid-cols-12 z-[2] lg:text-start text-center lg:py-16 py-12 relative border-b border-neutral-40">
       <div class="col-span-12 lg:col-span-6 xl:col-span-6 lg:mb-0 mb-5">
         <h2 class="h1 reveal_anim lg:mb-3 mb-2 lg:text-neutral-900 text-neutral-0">Subscribe Our Newsletter</h2>
         <p class="md:text-lg text-base lg:text-gray-800 text-neutral-0">Get the latest deals and offers right to your inbox.</p>
@@ -13,10 +13,10 @@
       </div>
     </div>
   </div>
-  <div class="cont grid grid-cols-12 gap-4 relative z-[2] pb-12 xl:pb-20 pt-120">
-    <div class="col-span-12 lg:col-span-6 xl:col-span-4 reveal_anim" data-reveal-from="right">
+  <div class="cont grid grid-cols-12 lg:gap-4 gap-7 relative z-[2] pb-12 xl:pb-20 pt-120">
+    <div class="col-span-12 sm:col-span-6 lg:col-span-4 reveal_anim" data-reveal-from="right">
       <img src="./assets/images/logo.png" class="mb-4" alt="" />
-      <p class="mb-6">Welcome to WellHub, where fresh, organic produce meets sustainability.</p>
+      <p class="mb-6 max-w-[348px] md:text-lg text-base text-neutral-400">Welcome to WellHub, your space for healing, growth, and personalized mental health support.</p>
       <div class="flex items-center gap-2">
         <a href="#" aria-label="social site link" class="social-icon two">
           <i class="hgi-stroke hgi-facebook-01"></i>
@@ -32,47 +32,69 @@
         </a>
       </div>
     </div>
-    <div data-reveal-from="bottom" class="reveal_anim col-span-12 lg:col-span-6 xl:col-span-7 xl:col-start-8 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3">
+    <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-2 reveal_anim">
+      <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Quick Links</p>
+      <ul class="space-y-4">
+        <li><a href="index.html" class="link xxl:text-lg text-base" >Home</a></li>
+        <li><a href="about.html" class="link xxl:text-lg text-base" >About Us</a></li>
+        <li><a href="about.html" class="link xxl:text-lg text-base" >Services</a></li>
+        <li><a href="blogs.html" class="link xxl:text-lg text-base" >Blogs</a></li>
+        <li><a href="#0" class="link xxl:text-lg text-base" >Shop</a></li>
+        <li><a href="#0" class="link xxl:text-lg text-base" >Contact Us</a></li>
+      </ul>
+    </div>
+    <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
       <div>
-        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Quick Links</p>
+        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Services</p>
         <ul class="space-y-4">
-          <li><a href="index.html" class="link" >Home</a></li>
-          <li><a href="about.html" class="link" >About Us</a></li>
-          <li><a href="about.html" class="link" >Services</a></li>
-          <li><a href="blogs.html" class="link" >Blogs</a></li>
-          <li><a href="#0" class="link" >Shop</a></li>
-          <li><a href="#0" class="link" >Contact Us</a></li>
+          <li><a href="index.html" class="link xxl:text-lg text-base" >Physiotherapy</a></li>
+          <li><a href="index.html" class="link xxl:text-lg text-base" >Rehabilitation Center</a></li>
+          <li><a href="index.html" class="link xxl:text-lg text-base" >Massage Therapy</a></li>
+          <li><a href="index.html" class="link xxl:text-lg text-base" >Group Therapy</a></li>
+          <li><a href="index.html" class="link xxl:text-lg text-base" >Chiropractic Care</a></li>
+          <li><a href="index.html" class="link xxl:text-lg text-base" >Psychological Counseling</a></li>
         </ul>
       </div>
+    </div>
+    <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
       <div>
-        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-900">Services</p>
+        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Address</p>
         <ul class="space-y-4">
-          <li><a href="index.html" class="link">Agriculture</a></li>
-          <li><a href="index-2.html" class="link">Agro Services</a></li>
-          <li><a href="index-3.html" class="link">Dairy Farm</a></li>
-          <li><a href="index-4.html" class="link">Organic Farm</a></li>
-        </ul>
-      </div>
-      <div>
-        <p class="mb-4 h4 xl:mb-6 xl:text-neutral-0">Other's</p>
-        <ul class="space-y-4">
-          <li><a href="about-us.html" class="link">About Us</a></li>
-          <li><a href="farmers.html" class="link">Our Team</a></li>
-          <li><a href="portfolio-1.html" class="link">Portfolio</a></li>
-          <li><a href="pricing.html" class="link">Pricing</a></li>
+          <li>
+            <a href="index.html" class="flex items-center gap-2" >
+              <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-mail-01 text-green-300"></i></span>
+              <span class="xxl:text-lg text-base text-neutral-400">support@wellhub.com</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html" class="flex items-center gap-2" >
+              <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-location-06 text-green-300"></i></span>
+              <span class="xxl:text-lg text-base text-neutral-400">123 Wellness Street,
+                Health City, CA 45678</span>
+            </a>
+          </li>
+          <li>
+            <a href="index.html" class="flex items-center gap-2" >
+              <span class="w-10 min-w-[40px] h-10 rounded-full flex justify-center items-center bg-green-50"><i class="hgi hgi-stroke hgi-calling text-green-300"></i></span>
+              <span class="xxl:text-lg text-base text-neutral-400">+1 234 567 8901</span>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
   </div>
+  <div class="bg-neutral-0 py-4 xl:py-6 border-t border-neutral-40">
+    <div class="cont">
+      <div class="grid sm:flex sm:justify-between justify-center gap-y-2 sm:gap-y-0">
+        <p>Copyright © <span id="year"></span> <a href="index.html" class="text-green-500 font-semibold underline">WellHub</a> All Rights Reserved</p>
+        <div class="flex sm:justify-start justify-center gap-x-3 md:gap-x-5">
+          <a href="privacy-policy.html" class="link">Privacy Policy</a>
+          <a href="terms-conditions.html" class="link">Terms & Conditions</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ele -->
+  <img src="assets/images/element/dots-ele.png" alt="img" class="absolute start-0 top-[180px] updown z-[-1] xxl:block hidden">
+  <img src="assets/images/element/flower-circle.png" alt="img" class="absolute max-w-[250px] end-[-80px] top-[290px] circle z-[-1]">
 </footer>
-<div class="bg-neutral-0 py-4 xl:py-6 border-t border-neutral-40">
-  <div class="cont">
-    <div class="grid sm:flex sm:justify-between justify-center gap-y-2 sm:gap-y-0">
-      <p>Copyright © <span id="year"></span> <a href="index.html" class="text-green-500 font-semibold underline">WellHub</a> All Rights Reserved</p>
-      <div class="flex sm:justify-start justify-center gap-x-3 md:gap-x-5">
-        <a href="privacy-policy.html" class="link">Privacy Policy</a>
-        <a href="terms-conditions.html" class="link">Terms & Conditions</a>
-      </div>
-    </div>
-  </div>
-</div>
