--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
       <li class="dropdown-item">
         <button class="dropdown-btn">Home <i class="hgi-stroke hgi-arrow-down-01 text-lg"></i></button>
         <ul class="dropdown-menu">
-          <li><a class="menu-link" href="index.html">Agriculture</a></li>
+          <li><a class="menu-link" href="index.html">Physiotherapy</a></li>
           <li><a class="menu-link" href="index-2.html">Agro Service</a></li>
           <li><a class="menu-link" href="index-3.html">Dairy Farm</a></li>
           <li><a class="menu-link" href="index-4.html">Organic Farm</a></li>
