--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -10,7 +10,7 @@
       <button class="submenu-btn border border-neutral-40 flex w-full items-center justify-between rounded-md px-3 py-2.5 font-medium">Home <i class="hgi-stroke hgi-arrow-down-01"></i></button>
       <div class="submenu-content">
         <ul class="space-y-2 py-2 pl-3">
-          <li><a class="border border-neutral-40 flex rounded-md px-3 py-2" href="index.html">Agriculture</a></li>
+          <li><a class="border border-neutral-40 flex rounded-md px-3 py-2" href="index.html">Physiotherapy</a></li>
           <li><a class="border border-neutral-40 flex rounded-md px-3 py-2" href="index-2.html">Agro Service</a></li>
           <li><a class="border border-neutral-40 flex rounded-md px-3 py-2" href="index-3.html">Dairy Farm</a></li>
           <li><a class="border border-neutral-40 flex rounded-md px-3 py-2" href="index-4.html">Organic Farm</a></li>
