all-inner-pages-done

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -36,11 +36,11 @@
       <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Quick Links</p>
       <ul class="space-y-4">
         <li><a href="index.html" class="link xxl:text-lg text-base" >Home</a></li>
-        <li><a href="about.html" class="link xxl:text-lg text-base" >About Us</a></li>
-        <li><a href="about.html" class="link xxl:text-lg text-base" >Services</a></li>
+        <li><a href="about-us.html" class="link xxl:text-lg text-base" >About Us</a></li>
+        <li><a href="services.html" class="link xxl:text-lg text-base" >Services</a></li>
         <li><a href="blogs.html" class="link xxl:text-lg text-base" >Blogs</a></li>
-        <li><a href="#0" class="link xxl:text-lg text-base" >Shop</a></li>
-        <li><a href="#0" class="link xxl:text-lg text-base" >Contact Us</a></li>
+        <li><a href="shop.html" class="link xxl:text-lg text-base" >Shop</a></li>
+        <li><a href="contact-us.html" class="link xxl:text-lg text-base" >Contact Us</a></li>
       </ul>
     </div>
     <div data-reveal-from="bottom" class="col-span-12 sm:col-span-6 lg:col-span-3 flex lg:justify-center reveal_anim">
@@ -48,11 +48,11 @@
         <p class="mb-4 h4 xl:mb-6 xl:text-neutral-800 font-playfair">Services</p>
         <ul class="space-y-4">
           <li><a href="index.html" class="link xxl:text-lg text-base" >Physiotherapy</a></li>
-          <li><a href="index.html" class="link xxl:text-lg text-base" >Rehabilitation Center</a></li>
-          <li><a href="index.html" class="link xxl:text-lg text-base" >Massage Therapy</a></li>
-          <li><a href="index.html" class="link xxl:text-lg text-base" >Group Therapy</a></li>
-          <li><a href="index.html" class="link xxl:text-lg text-base" >Chiropractic Care</a></li>
-          <li><a href="index.html" class="link xxl:text-lg text-base" >Psychological Counseling</a></li>
+          <li><a href="index-2.html" class="link xxl:text-lg text-base" >Rehabilitation Center</a></li>
+          <li><a href="index-3.html" class="link xxl:text-lg text-base" >Massage Therapy</a></li>
+          <li><a href="index-4.html" class="link xxl:text-lg text-base" >Group Therapy</a></li>
+          <li><a href="index-5.html" class="link xxl:text-lg text-base" >Chiropractic Care</a></li>
+          <li><a href="index-6.html" class="link xxl:text-lg text-base" >Psychological Counseling</a></li>
         </ul>
       </div>
     </div>
